--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:id="@+id/main"
+android:orientation="vertical"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context=".MainActivity">
+
+<!--<TextView-->
+<!--    android:id="@+id/tv1"-->
+<!--    android:layout_marginTop="100dp"-->
+<!--    android:layout_gravity="center"-->
+<!--    android:layout_width="250dp"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:text="Number not found"-->
+<!--    android:textSize="30dp"-->
+<!--    android:textAlignment="center"-->
+<!--    />-->
+
+<!--<Button-->
+<!--    android:id="@+id/btn1"-->
+<!--    android:layout_marginTop="100dp"-->
+<!--    android:layout_gravity="center"-->
+<!--    android:layout_width="250dp"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:text="Click for number"-->
+<!--    android:textSize="30dp"-->
+<!--    android:onClick="onClickRand"-->
+<!--    />-->
+
+<!--    <Button-->
+<!--        android:id="@+id/btn2"-->
+<!--        android:layout_marginTop="100dp"-->
+<!--        android:layout_gravity="center"-->
+<!--        android:layout_width="250dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Cancel the number"-->
+<!--        android:textSize="30dp"-->
+<!--        android:onClick="onClickReset"-->
+<!--        />-->
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/resultTv"
+        android:layout_marginTop="100dp"
+        android:layout_gravity="center"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:text="True/false"
+        android:textAlignment="center"
+        android:textSize="30dp"/>
+    <TableRow
+        android:layout_marginTop="100dp"
+        android:layout_width="match_parent"
+        android:layout_height="100dp" >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/num1Tv"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="75dp"
+            android:text="1st number"
+            android:textSize="30dp"
+            android:textAlignment="center" />
+
+        <TextView
+            android:id="@+id/num2Tv"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="70dp"
+            android:text="2st number"
+            android:textSize="30dp"
+            android:textAlignment="center" />
+    </TableRow>
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginTop="100dp" >
+
+        <Button
+            android:id="@+id/smallerBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="30dp"
+            android:text="<"
+            android:textSize="30dp"
+            android:onClick="onClickCheckSm"/>
+
+        <Button
+            android:id="@+id/equalBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="40dp"
+            android:text="="
+            android:textSize="30dp"
+            android:onClick="onClickCheckEq"/>
+
+        <Button
+            android:id="@+id/biggerBtn"
+            android:layout_width="wrap_content"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:text=">"
+            android:textSize="30dp"
+            android:onClick="onClickCheckBg"/>
+    </TableRow>
+
+    <Button
+        android:id="@+id/NumGenBtn"
+        android:layout_marginTop="100dp"
+        android:layout_gravity="center"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="Press for numbers"
+        android:textSize="30dp"
+        android:onClick="onClickGenNums" />
+
+
+</LinearLayout>
